<resources>
    <string name="app_name">KcpeTeacherApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="forgot_your_password" translatable="false">Forgot your password?</string>
    <string name="password" translatable="false">Password</string>
    <string name="user_name_or_e_mail_address" translatable="false">E-mail address</string>

    <string name="google" translatable="false">Google</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="terms_and_conditions" translatable="false"><![CDATA[By Signing in to this app you agree to the <a href=\'https://klickitapp.co.ke/privacy-policy/\'>KlickIt Apps Terms of Service</a> and <a href=\'https://klickitapp.co.ke/privacy-policy/\'>Privacy Policy.</a>]]></string>
    <string name="confirm_password" translatable="false">Confirm Password</string>
    <string name="register_with">Register with</string>

    <string name="facebook_app_id">566035817596715</string>
    <string name="fb_login_protocol_scheme">fb566035817596715</string>
    <string-array name="salutation">
        <item>Select Appropriate Salutation</item>
        <item>Mr</item>
        <item>Mrs</item>
        <item>Madam</item>
        <item>Sir</item>
    </string-array>

</resources>
