<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.accounts.RegisterFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout

                        android:layout_centerInParent="true"
                        android:id="@+id/signup_page"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/logo"
                            android:layout_width="match_parent"
                            android:layout_height="128dp"
                            android:layout_marginBottom="16dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/logo"
                            android:layout_marginTop="120dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <RelativeLayout
                            android:id="@+id/divider_layout"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/logo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="24dp">

                            <TextView
                                android:id="@+id/tvText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:text="@string/register_with"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="14sp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="2dp"
                                android:layout_marginTop="8dp"
                                android:layout_toStartOf="@id/tvText"
                                android:background="@color/colorDivider" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_centerVertical="true"
                                android:layout_marginTop="8dp"
                                android:layout_toEndOf="@id/tvText"
                                android:background="@color/colorDivider" />

                        </RelativeLayout>

                        <LinearLayout
                            android:id="@+id/social_login_layout"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/divider_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="24dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:orientation="horizontal"
                            android:weightSum="2">


                            <Button
                                android:id="@+id/btn_facebook"
                                style="@style/FacebookButton"
                                android:layout_width="0dp"
                                android:layout_height="40dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="4dp"
                                android:layout_weight="1"
                                android:drawableStart="@drawable/fb_24"
                                android:drawablePadding="8dp"
                                android:padding="8dp"
                                android:text="@string/facebook"
                                android:clickable="true"
                                android:focusable="true"
                                android:foreground="?attr/selectableItemBackgroundBorderless"

                                android:textStyle="normal" />


                            <Button
                                android:id="@+id/btn_google"
                                style="@style/GoogleButton"
                                android:layout_width="0dp"
                                android:layout_height="40dp"
                                android:layout_marginStart="4dp"
                                android:layout_marginTop="8dp"
                                android:layout_weight="1"
                                android:drawableStart="@drawable/googleplus_24"
                                android:drawablePadding="8dp"
                                android:padding="8dp"
                                android:text="@string/google"
                                android:clickable="true"
                                android:focusable="true"
                                android:foreground="?attr/selectableItemBackgroundBorderless"

                                android:textStyle="normal" />

                        </LinearLayout>

                        <RelativeLayout
                            android:id="@+id/divider_layout1"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/social_login_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="24dp">

                            <TextView
                                android:id="@+id/tvText1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:text="Or Register with Email"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="14sp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="2dp"
                                android:layout_marginTop="8dp"
                                android:layout_toStartOf="@id/tvText1"
                                android:background="@color/colorDivider" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_centerVertical="true"
                                android:layout_marginTop="8dp"
                                android:layout_toEndOf="@id/tvText1"
                                android:background="@color/colorDivider" />

                        </RelativeLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/email_address_layout"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/divider_layout1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="24dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txt_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="E-mail address"
                                android:inputType="textEmailAddress" />

                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/txt_password_layout"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/email_address_layout"
                            app:passwordToggleEnabled="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="24dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txt_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/password"
                                android:inputType="textPassword" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/txt_confirm_password_layout"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/txt_password_layout"
                            app:passwordToggleEnabled="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="24dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txt_confirm_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/confirm_password"
                                android:inputType="textPassword" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/btn_create_account"
                            style="@style/ButtonPrimaryCornered"
                            app:layout_constraintTop_toBottomOf="@id/txt_confirm_password_layout"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="24dp"
                            android:text="Create Account" />


                        <TextView
                            android:id="@+id/tv_login_terms"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/btn_create_account"
                            app:layout_constraintVertical_bias="0.136"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="24dp"
                            android:autoLink="web"
                            android:linksClickable="true"
                            android:padding="8dp"
                            android:textSize="12sp" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </RelativeLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>