<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="terms"
            type="android.text.Spanned" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".ui.accounts.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="match_parent"
                        android:layout_height="128dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="16dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/logo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_username_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/logo">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/user_name_or_e_mail_address"
                            android:inputType="textEmailAddress"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_password_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txt_username_layout"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="Forgot Password"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txt_password_layout" />


                    <TextView
                        android:id="@+id/tv_dont_have_account"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="Don't have account?"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txt_password_layout" />

                    <Button
                        android:id="@+id/btn_login"
                        style="@style/ButtonPrimaryCornered"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:text="Sign In"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

                    <RelativeLayout
                        android:id="@+id/divider_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        app:layout_constraintTop_toBottomOf="@id/btn_login">

                        <TextView
                            android:id="@+id/tvText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="Or sign in with"
                            android:textColor="@color/colorPrimaryText" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="8dp"
                            android:layout_toStartOf="@id/tvText"
                            android:background="@color/colorDivider" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="8dp"
                            android:layout_toEndOf="@id/tvText"
                            android:background="@color/colorDivider" />

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/social_login_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/divider_layout">


                        <Button
                            android:id="@+id/btn_facebook"
                            style="@style/FacebookButton"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="4dp"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/fb_24"
                            android:drawablePadding="8dp"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:padding="8dp"
                            android:text="@string/facebook"
                            android:textStyle="normal" />


                        <Button
                            android:id="@+id/btn_google"
                            style="@style/GoogleButton"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:drawableStart="@drawable/googleplus_24"
                            android:drawablePadding="8dp"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:padding="8dp"
                            android:text="@string/google"
                            android:textStyle="normal" />

                    </LinearLayout>


                    <TextView
                        android:id="@+id/tv_login_terms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:autoLink="web"
                        android:linksClickable="true"
                        android:padding="8dp"
                        android:text="@{terms}"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/social_login_layout" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</layout>